19990603-13:10 CET Eddie Runia
  * source/rtl/classes.c
    small optimalization

19990603-11:40 CET Eddie Runia
  * source/compiler/harbour.y
    <obj>:<meth>[<index>] := <value> syntax added
  * build32
    runner build from batch file

19990603-00:00 PST Ron Pinkas
  * hvm.c
    - Changed VitualMachine() to use direct dynamic call for processing pcodes rather tha the switch loop.

19990603-00:30 EDT David G. Holm <dholm@jsd-llc.com>
  * makedos.env
    - Removed HARBOURDIR definition to a batch file

19990602-23:30 EDT David G. Holm <dholm@jsd-llc.com>
  * source/compiler/makefile.dos
    - bison needs -y option so that it won't replace harbour.c with y_tab.c
      when building Harbour with DJGPP
  * source/rtl/console.c
    - Moved MAXROW() and MAXCOL() from gtapi.c and added #ifdef USE_GTAPI
      in each. The #else condition defines the screen as 24x80 (23, 79)
  * source/rtl/gtapi.c
    - Moved MAXROW() and MAXCOL() to console.c in order to not include the
      GT API when it isn't wanted (such as when building with DJGPP)

19990602-20:45 EDT David G. Holm <dholm@jsd-llc.com>
  * source/rtl/environ.c
    - Modified #ifdef _Windows section to return "Windows"
      instead of "Windows 95/98".

19990602-18:20 EDT David G. Holm <dholm@jsd-llc.com>
  * source/rtl/strings.c
    - Changed if( lLen > lSubLen ) to if( lLen >= lSubLen )
      Reported by "Alexander S.Kresin" <alex@belacy.belgorod.su>

19990602-16:00 EDT David G. Holm <dholm@jsd-llc.com>
  + tests/broken/codebloc.prg
    - Output doesn't match Clipper. Clipper outputs NIL and 42,
      (both 5.2e and 5.3b), but Harbour outputs NIL and NIL (as
      tested with Harbour built using Borland C++ 3.1 using the
      build31.bat and makefile.b31 files)

19990602-22:10 CET Eddie Runia
  * tests/working/run_exp.h
    gtApi and new console functions added

19990602-16:00 EDT David G. Holm <dholm@jsd-llc.com>
  * source/rtl/console.c
    - OS/2 requires that stdout and stderr be flushed in order to stay